--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </head>
 <body>
 <div class="okl">
-<a href="my_website_main_page.html"><img src ="a logo1.png" style=" position: relative; height: 150px; width: 150px; border-radius: 100%; top: 20px; left: 20px;"></a>
+<a href="index.html"><img src ="a logo1.png" style=" position: relative; height: 150px; width: 150px; border-radius: 100%; top: 20px; left: 20px;"></a>
 <h1 style="position: relative; left: 400px; bottom: 130px; font-size: 40px; color: white;">ALERON</h1>
 <ul class="lol">
 <li><a href="Aleron About.html">About</a></li>
